--- a/yt-clone-client/app/sidebar/sidebar.module.css
+++ b/yt-clone-client/app/sidebar/sidebar.module.css
@@ -1,33 +1,3 @@
-.sidebar {
-  width: 240px;
-  background-color: #f9f9f9;
-  color: #030303;
-  padding: 10px 0; 
-  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-  transition: width 0.3s ease-in-out, transform 0.3s ease-in-out;
-  overflow-y: auto; 
-  top: 0;
-  left: 0; 
-  height: 100vh; 
-}
-
-.sidebar.closed {
-  width: 72px;
-}
-
-.sidebarHeader {
-  padding: 10px 20px;
-  display: flex;
-  align-items: center;
-  height: 56px;
-}
-
-.sidebarHeader h2 {
-    font-size: 1.2em;
-    margin: 0;
-}
-
-
 .sidebarSection {
   margin-bottom: 15px; 
 }
@@ -38,9 +8,6 @@
   color: #606060; 
   padding: 0 20px 5px; 
   margin: 0;
-   .closed & { 
-     display: none;
-   }
 }
 
 .sidebarItem {
@@ -68,26 +35,13 @@
   font-size: 0.9em;
   white-space: nowrap; 
   overflow: hidden; 
-  text-overflow: ellipsis; 
-  .closed & { 
-    display: none;
-  }
+  text-overflow: ellipsis;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
 }
 
 .separator {
   border: none;
   border-top: 1px solid #e0e0e0; 
   margin: 10px 0;
-}
-
-.closed .sidebarItem {
-    flex-direction: column; 
-    padding: 10px 0; 
-    justify-content: center;
-    text-align: center;
-}
-
-.closed .itemIcon {
-    margin-right: 0; 
-    margin-bottom: 5px; 
 }
